# cladetime

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PR_181_COMPREHENSIVE_SUMMARY.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  publish-pypi-test.yaml  publish-pypi.yaml  run-code-checks.yaml  run-integration-tests.yaml
docs/: conf.py  index.rst  user-guide.rst
docs/reference/: clade.rst  cladetime.rst  exceptions.rst  filter_covid_genome_metadata.rst  index.rst  sequence.rst  tree.rst  types.rst  utilities.rst
requirements/: requirements-dev.txt  requirements-doc.txt  requirements-docs.txt  requirements.txt
src/cladetime/: __init__.py  _clade.py  assign_clades.py  clade.py  cladetime.py  exceptions.py  sequence.py  tree.py  types.py  typing.py
src/cladetime/util/: config.py  reference.py  sequence.py  session.py  tree.py
tests/: conftest.py
tests/data/: README.md  test_metadata.tsv  test_sequences.fasta  test_sequences.fasta.xz  test_sequences.fasta.zst  test_sequences_fake.fasta  test_sequences_updated.fasta
tests/data/moto_fixture/: metadata_version.json
tests/integration/: test_assign_clades.py  test_cladetime_integration.py  test_nexclade_integration.py  test_nextclade_integration.py  test_tree.py
tests/unit/: conftest.py  test_cladetime.py  test_get_clade_list.py  test_sequence.py
tests/unit/util/: test_reference.py  test_sequence.py  test_tree.py
