[project]
name = "cladetime"
version = "0.2.0"
description = "Assign clades to viral genome sequences at a point in time."
authors = [
    {name = "Evan Ray", email="elray@umass.edu"},
    {name = "Ben Rogers", email = "bwrogers@umass.edu"},
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]

requires-python = ">=3.11"
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
    "awscli>=1.32.92",
    "biopython",
    "boto3",
    "cloudpathlib",
    "docker",
    "pandas",
    "polars>=1.17.1",
    "pyarrow",
    "requests>=2.32.0",
    "rich",
    "structlog",
    "tqdm",
    "urllib3",
    "us",
    "zstandard",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[s3]",
    "coverage",
    "freezegun",
    "jinja2>3.1.4",
    "moto",
    "mypy",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-python-dateutil",
    "types-requests",
]
docs = [
    "furo",
    "jinja2>3.1.4",
    "matplotlib",
    "myst-parser",
    "sphinx>=5.0,<6.0",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-github-style",
    "sphinxext-opengraph",
    "sphinx_toolbox",
    ]

[project.urls]
Repository = "https://github.com/reichlab/cladetime.git"
Documentation = "https://cladetime.readthedocs.io/"
Issues = "https://github.com/reichlab/cladetime/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
filterwarnings = [
    "ignore::cladetime.exceptions.CladeTimeDateWarning",
    "ignore::DeprecationWarning",
    'ignore:polars found a filename',
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ignore import formatting rules in `__init__.py`
"__init__.py" = ["I001"]

[tools.setuptools]
packages = ["cladetime"]

[tool.mypy]
ignore_missing_imports = true

